--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
        <link rel="stylesheet" href="./styles/main.css"
        <title>Browserify</title>
        <meta name="viewport" content="width=device-width, initial-scale=1">
+       <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
        
    </head>
    <body class = mainBody>
